// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ember-test-types-task only renders todos/only test types if they a value > 0 1`] = `
"Test Types

Unit

Method Count 
test   0     
skip   0     
only   0     
todo   0     

Rendering

Method Count 
test   1     
skip   0     
only   1     
todo   1     

Application

Method Count 
test   0     
skip   0     
only   0     
todo   0     

Tests By Type

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 3 tests
■ unit (0)  ■ rendering (3)  ■ application (0)  

"
`;

exports[`ember-test-types-task returns all the test types (including nested) found in the app and outputs to the console 1`] = `
"Test Types

Unit

Method Count 
test   2     
skip   4     
only   0     
todo   0     

Rendering

Method Count 
test   2     
skip   4     
only   0     
todo   0     

Application

Method Count 
test   4     
skip   8     
only   0     
todo   0     

Tests By Type

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 24 tests
■ unit (6)  ■ rendering (6)  ■ application (12)  

"
`;

exports[`ember-test-types-task returns all the test types found in the app and outputs to json 1`] = `
Object {
  "info": Object {
    "friendlyTaskName": "Test Types",
    "taskClassification": Object {
      "category": "testing",
      "group": "ember",
    },
    "taskName": "ember-test-types",
  },
  "result": Array [
    Object {
      "data": Array [
        Object {
          "column": 9,
          "filePath": "/addon/unit/tests/my-component-test.js",
          "line": 5,
          "message": "unit|test",
          "method": "test",
          "ruleId": "test-types",
        },
        Object {
          "column": 9,
          "filePath": "/addon/unit/tests/my-component-test.js",
          "line": 6,
          "message": "unit|skip",
          "method": "skip",
          "ruleId": "test-types",
        },
        Object {
          "column": 9,
          "filePath": "/addon/unit/tests/my-component-test.js",
          "line": 7,
          "message": "unit|skip",
          "method": "skip",
          "ruleId": "test-types",
        },
      ],
      "dataSummary": Object {
        "dataKey": "method",
        "total": 3,
        "values": Object {
          "only": 0,
          "skip": 2,
          "test": 1,
          "todo": 0,
        },
      },
      "key": "unit",
      "type": "multi-value",
    },
    Object {
      "data": Array [
        Object {
          "column": 9,
          "filePath": "/addon/rendering/tests/my-component-test.js",
          "line": 5,
          "message": "rendering|test",
          "method": "test",
          "ruleId": "test-types",
        },
        Object {
          "column": 9,
          "filePath": "/addon/rendering/tests/my-component-test.js",
          "line": 6,
          "message": "rendering|skip",
          "method": "skip",
          "ruleId": "test-types",
        },
        Object {
          "column": 9,
          "filePath": "/addon/rendering/tests/my-component-test.js",
          "line": 7,
          "message": "rendering|skip",
          "method": "skip",
          "ruleId": "test-types",
        },
      ],
      "dataSummary": Object {
        "dataKey": "method",
        "total": 3,
        "values": Object {
          "only": 0,
          "skip": 2,
          "test": 1,
          "todo": 0,
        },
      },
      "key": "rendering",
      "type": "multi-value",
    },
    Object {
      "data": Array [
        Object {
          "column": 9,
          "filePath": "/addon/application/someFolder/my-component-test.js",
          "line": 5,
          "message": "application|test",
          "method": "test",
          "ruleId": "test-types",
        },
        Object {
          "column": 9,
          "filePath": "/addon/application/someFolder/my-component-test.js",
          "line": 6,
          "message": "application|skip",
          "method": "skip",
          "ruleId": "test-types",
        },
        Object {
          "column": 9,
          "filePath": "/addon/application/someFolder/my-component-test.js",
          "line": 7,
          "message": "application|skip",
          "method": "skip",
          "ruleId": "test-types",
        },
        Object {
          "column": 9,
          "filePath": "/addon/application/tests/my-component-test.js",
          "line": 5,
          "message": "application|test",
          "method": "test",
          "ruleId": "test-types",
        },
        Object {
          "column": 9,
          "filePath": "/addon/application/tests/my-component-test.js",
          "line": 6,
          "message": "application|skip",
          "method": "skip",
          "ruleId": "test-types",
        },
        Object {
          "column": 9,
          "filePath": "/addon/application/tests/my-component-test.js",
          "line": 7,
          "message": "application|skip",
          "method": "skip",
          "ruleId": "test-types",
        },
      ],
      "dataSummary": Object {
        "dataKey": "method",
        "total": 6,
        "values": Object {
          "only": 0,
          "skip": 4,
          "test": 2,
          "todo": 0,
        },
      },
      "key": "application",
      "type": "multi-value",
    },
  ],
}
`;

exports[`ember-test-types-task returns all the test types found in the app and outputs to the console 1`] = `
"Test Types

Unit

Method Count 
test   1     
skip   2     
only   0     
todo   0     

Rendering

Method Count 
test   1     
skip   2     
only   0     
todo   0     

Application

Method Count 
test   2     
skip   4     
only   0     
todo   0     

Tests By Type

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 12 tests
■ unit (3)  ■ rendering (3)  ■ application (6)  

"
`;
